# flamapp-assignment

./: README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/flamappassignment/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/flamappassignment/: MainActivity.kt
app/src/main/java/com/example/flamappassignment/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/flamappassignment/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
